--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-slick": "^0.25.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
