--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
     "rxjs": "^6.5.4",
     "uuid": "^3.4.0"
