--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@adonisjs/auth": "^3.0.7",
     "@adonisjs/bodyparser": "^2.0.5",
     "@adonisjs/cors": "^1.0.7",
+    "@adonisjs/drive": "^1.0.4",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
@@ -27,6 +28,7 @@
     "@adonisjs/vow": "^1.0.17",
     "@radmen/adonis-lucid-soft-deletes": "^0.1.4",
     "adonis-lucid-polymorphic": "^1.0.1",
+    "file-type": "^14.1.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0"
   },
