--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-select": "^3.0.8",
