--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "ead",
+  "name": "ead-frontend-web",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3333",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "env-cmd": "^10.1.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -20,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf ../backend/public/* && mv -v build/* ../backend/public/ && rm -rf build && mv ../backend/public/index.html ../backend/public/app.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
