--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.3.1",
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
+    "react-tabs": "^3.1.0",
     "rxjs": "^6.5.4",
     "uuid": "^3.4.0"
   },
