--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
     "react-tabs": "^3.1.0",
+    "react-youtube": "^7.9.0",
     "rxjs": "^6.5.4",
     "uuid": "^3.4.0"
   },
