--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
     "@radmen/adonis-lucid-soft-deletes": "^0.1.4",
+    "adonis-drive-google": "master",
     "adonis-lucid-polymorphic": "^1.0.1",
     "file-type": "^14.1.3",
     "mysql": "^2.18.1",
