chore(backend): add example of .env for default storage drive and gcs config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,8 @@ CACHE_VIEWS=false
 
 APP_KEY=
 
+LOCALE=
+
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -17,3 +19,8 @@ DB_PASSWORD=
 DB_DATABASE=adonis
 
 HASH_DRIVER=bcrypt
+
+DRIVE_DEFAULT_DISK=local
+
+GCS_KEY_FILE_NAME=
+GCS_BUCKET=
