--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "adonis-drive-google": "master",
     "adonis-lucid-polymorphic": "^1.0.1",
     "file-type": "^14.1.3",
+    "googleapis": "^48.0.0",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0"
   },
