--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,6 @@
 {
   "name": "ead-frontend-web",
   "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:3333",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -24,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf ../backend/public/* && mv -v build/* ../backend/public/ && rm -rf build && mv ../backend/public/index.html ../backend/public/app.html",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
