--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ead-frontend-web",
   "version": "0.1.0",
-  "licence": "AGPL-3.0-only",
+  "license": "AGPL-3.0-only",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
