feat(backend): created /forgot and /reset endpoints
- Request a forgot password token and receive at email
- Send token, new password and new password confirmation to reset

--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -3,6 +3,8 @@ PORT=9999
 NODE_ENV=testing
 APP_NAME="EAD REST API"
 APP_URL=http://${HOST}:${PORT}
+FRONT_URL=http://${HOST}:3000
+
 CACHE_VIEWS=false
 APP_KEY=n3zhgl8wHXiC6E0lgb23mJGkrzFkGTMe
 DB_CONNECTION=mysql
