--- a/backend/package.json
+++ b/backend/package.json
@@ -26,11 +26,13 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^3.0.10",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
     "@radmen/adonis-lucid-soft-deletes": "^0.1.4",
     "adonis-drive-google": "master",
     "adonis-lucid-polymorphic": "^1.0.1",
+    "date-fns": "^2.12.0",
     "file-type": "^14.1.3",
     "googleapis": "^48.0.0",
     "moment": "^2.24.0",
