config: Added config of mail server into .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,10 @@ GCS_KEY_FILE_NAME=
 GCS_BUCKET=
 
 GOOGLE_API_KEY=
+
+MAIL_CONNECTION=
+SMTP_PORT=
+SMTP_HOST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=
